# aspira-tools

./: .gitignore  README.md
aic-wifi-driver/: Kbuild  Makefile  README.md  dkms.conf
aic-wifi-driver/docs/: AIC8800_USB_WiFi_Driver_Architecture.md
aic-wifi-driver/firmware/: README.md  manifest.json
aic-wifi-driver/include/: aic_cfg80211.h  aic_cmd.h  aic_compat.h  aic_debugfs.h  aic_dev.h  aic_event.h  aic_fw.h  aic_hci.h  aic_pm.h  aic_recovery.h  aic_rx.h  aic_stats.h  aic_trace.h  aic_tx.h  aic_usb.h
aic-wifi-driver/src/: aic_cfg80211.c  aic_cmd.c  aic_debugfs.c  aic_event.c  aic_fw.c  aic_hci.c  aic_main.c  aic_netdev.c  aic_pm.c  aic_recovery.c  aic_rx.c  aic_stats.c  aic_tx.c  aic_usb.c
aic-wifi-driver/udev/: 99-aic8800.rules
disk-checker/: CMakeLists.txt  README.md
disk-checker/docs/: disk_health_architecture_v1.md  self_healing_storage_subsystem_v2.md
disk-checker/include/: disk_health.h
disk-checker/src/: config.c  config.h  daemon.c  daemon.h  failure_predict.c  failure_predict.h  fault_detect.c  fault_detect.h  health_score.c  health_score.h  io_metrics.c  io_metrics.h  json_builder.c  json_builder.h  logger.c  logger.h  main.c  policy_engine.c  policy_engine.h  scanner.c  scanner.h  self_healing.c  self_healing.h  smart_ata.c  smart_ata.h  smart_nvme.c  smart_nvme.h
disk-checker/systemd/: disk_healthd.service
disk-checker/tests/: helper.sh  test_daemon.sh  test_failure_predict.sh  test_health_score.sh  test_io_metrics.sh  test_json_output.sh  test_scanner.sh  test_self_healing.sh  test_smart_ata.sh
embedded-system/: CMakeLists.txt  README.md  build.sh  installer-core
embedded-system/cli/: CMakeLists.txt  cli_commands.cpp  cli_commands.h  cli_main.cpp
embedded-system/cmake/: CompilerWarnings.cmake  Toolchain-aarch64.cmake
embedded-system/config/: installer.yaml
embedded-system/docs/: embedded_linux_installer_backup_restore_architecture.md
embedded-system/include/installer/: IBootControl.h  IConfigLoader.h  IDeviceManager.h  IFilesystemManager.h  IIPCClient.h  IIPCServer.h  IJob.h  IJobManager.h  IJobStep.h  IPackageManager.h  IPartitionManager.h  IProcessRunner.h  ITransactionJournal.h  ServiceContext.h
embedded-system/include/installer/boot/: iboot_control.h
embedded-system/include/installer/core/: error_codes.h  result.h  types.h
embedded-system/include/installer/device/: idevice_manager.h
embedded-system/include/installer/filesystem/: ifilesystem_manager.h
embedded-system/include/installer/image/: iimage_writer.h
embedded-system/include/installer/ipc/: iipc_client.h  iipc_server.h
embedded-system/include/installer/job/: ijob.h  ijob_manager.h  ijob_step.h
embedded-system/include/installer/journal/: itransaction_journal.h
embedded-system/include/installer/log/: ilogger.h
embedded-system/include/installer/package/: ipackage_manager.h
embedded-system/include/installer/partition/: ipartition_manager.h
embedded-system/include/installer/platform/: iprocess_runner.h
embedded-system/include/installer/security/: isecurity_manager.h
embedded-system/scripts/: create_test_disk.sh  run_tests.sh
embedded-system/src/: CMakeLists.txt
embedded-system/src/app/: core_service_main.cpp  service_setup.cpp  service_setup.h  standalone_main.cpp
embedded-system/src/common/: error_codes.cpp  file_utils.cpp  file_utils.h  types.cpp
embedded-system/src/config/: config_loader.cpp  config_loader.h
embedded-system/src/core/: boot_control.cpp  boot_control.h  device_manager.cpp  device_manager.h  filesystem_manager.cpp  filesystem_manager.h  hardware_profile.cpp  hardware_profile.h  image_writer.cpp  image_writer.h  job_manager.cpp  job_manager.h  package_manager.cpp  package_manager.h  partition_manager.cpp  partition_manager.h  security_manager.cpp  security_manager.h  service_context.h
embedded-system/src/ipc/: ipc_client.cpp  ipc_client.h  ipc_protocol.h  ipc_server.cpp  ipc_server.h  json_rpc_codec.cpp  json_rpc_codec.h
embedded-system/src/job/: base_job.cpp  base_job.h  install_job.cpp  install_job.h
embedded-system/src/job/steps/: check_compatibility.cpp  check_compatibility.h  check_storage.cpp  check_storage.h  configure_boot_slot.cpp  configure_boot_slot.h  create_filesystems.cpp  create_filesystems.h  detect_hardware.cpp  detect_hardware.h  load_package.cpp  load_package.h  prepare_partitions.cpp  prepare_partitions.h  verify_signature.cpp  verify_signature.h  verify_target.cpp  verify_target.h  write_bootloader.cpp  write_bootloader.h  write_kernel.cpp  write_kernel.h  write_rootfs.cpp  write_rootfs.h
embedded-system/src/journal/: transaction_journal.cpp  transaction_journal.h
embedded-system/src/log/: minimal_logger.cpp  structured_logger.cpp  structured_logger.h
embedded-system/src/platform/: process_runner.cpp  process_runner.h
embedded-system/systemd/: installer-core.service  installer-watchdog.service
embedded-system/tests/: CMakeLists.txt  standalone_verify.cpp  verify
embedded-system/tests/helpers/: loop_device.cpp  loop_device.h  minimal_test.h  test_package_builder.cpp  test_package_builder.h
embedded-system/tests/unit/: test_json_rpc_codec.cpp  test_result.cpp  test_transaction_journal.cpp
network-audit/: Makefile  build.sh  net-audit  net-audit-dbg
network-audit/cli/: config.c  config.h  main.c
network-audit/core/: reactor.c  reactor.h  timer_wheel.c  timer_wheel.h
network-audit/db/: sqlite.c  sqlite.h
network-audit/docs/: lightweight_network_audit_framework_v1.md
network-audit/fp/: fingerprint.c  fingerprint.h
network-audit/include/: net_audit.h
network-audit/net/: socket.c  socket.h
network-audit/result/: queue.c  queue.h
network-audit/scan/: scanner.c  scanner.h
network-audit/worker/: pool.c  pool.h
system-recovery/: Makefile  README.md  lv_conf.h
system-recovery/config/: default_config.ini
system-recovery/docs/: architecture-design.md  makefile-tutorial.docx
system-recovery/docs/test-reports/: functional-test-report.md  system-test-report.md
system-recovery/src/: main.c
system-recovery/tests/: test_framework.h  test_main.c
(+47 files in other folders)
